publish each project individually